feat: controler implemented and initials routes
